# RobotArmController

./: .gitignore  CMakeLists.txt  RobotArmController.pro  main.cpp
include/: robotcontrol.h  variables.h
src/: main.cpp  robotcontrol.cpp
src/DxlControl/: dxlcontrol.cpp  dxlcontrol.h
src/FileIO/: fileio.cpp
src/Numerical/: numerical.cpp
src/RobotArm/: robotarm.cpp  robotarm.h
src/TcpSocket/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
